--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <section class="mainPg">
         <h1>Shanu Kumar</h1>
         <p>The site is Live Now!</p>
+
+        <p>Follow me!</p>
+        <li><a href="https://www.instagram.com/shanukumar5057/">Instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/%20shanu-kumar-6a3a601ba">LinkedIn</a></li>
+
     </section>
 </body>
 
