--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="mainPg">
         <h1>Shanu Kumar</h1>
-        <p>The site is Live Now!</p>
+        <p>The site is Live Now!</p><br>
 
         <p>Follow me!</p>
         <li><a href="https://www.instagram.com/shanukumar5057/">Instagram</a></li>
